Fix: error theme on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2805,38 +2805,23 @@ html {
 .right-0 {
   right: 0px;
 }
-.-bottom-8 {
-  bottom: -2rem;
-}
-.-right-4 {
-  right: -1rem;
-}
-.-top-8 {
-  top: -2rem;
-}
-.-left-4 {
-  left: -1rem;
-}
-.-top-4 {
-  top: -1rem;
-}
-.-top-2 {
-  top: -0.5rem;
-}
-.-top-6 {
-  top: -1.5rem;
-}
 .-top-5 {
   top: -1.25rem;
 }
 .-left-5 {
   left: -1.25rem;
 }
-.-z-10 {
-  z-index: -10;
+.-bottom-8 {
+  bottom: -2rem;
+}
+.-right-4 {
+  right: -1rem;
 }
 .-z-20 {
   z-index: -20;
+}
+.-z-10 {
+  z-index: -10;
 }
 .mx-auto {
   margin-left: auto;
@@ -2845,10 +2830,6 @@ html {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-.mx-8 {
-  margin-left: 2rem;
-  margin-right: 2rem;
 }
 .my-4 {
   margin-top: 1rem;
@@ -2887,9 +2868,6 @@ html {
 .-mt-px {
   margin-top: -1px;
 }
-.mt-12 {
-  margin-top: 3rem;
-}
 .flex {
   display: flex;
 }
@@ -2914,14 +2892,14 @@ html {
 .h-16 {
   height: 4rem;
 }
+.h-20 {
+  height: 5rem;
+}
 .h-1 {
   height: 0.25rem;
 }
 .h-24 {
   height: 6rem;
-}
-.h-20 {
-  height: 5rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -2944,11 +2922,11 @@ html {
 .w-auto {
   width: auto;
 }
-.w-24 {
-  width: 6rem;
-}
 .w-20 {
   width: 5rem;
+}
+.w-24 {
+  width: 6rem;
 }
 .max-w-md {
   max-width: 28rem;
@@ -2999,9 +2977,6 @@ html {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
-.border-current {
-  border-color: currentColor;
-}
 .border-coklat {
   --tw-border-opacity: 1;
   border-color: rgb(192 175 133 / var(--tw-border-opacity));
@@ -3030,16 +3005,13 @@ html {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.bg-coklat {
-  --tw-bg-opacity: 1;
-  background-color: rgb(192 175 133 / var(--tw-bg-opacity));
-}
 .bg-ungu {
   --tw-bg-opacity: 1;
   background-color: rgb(36 50 95 / var(--tw-bg-opacity));
 }
-.bg-coklat\/75 {
-  background-color: rgb(192 175 133 / 0.75);
+.bg-coklat {
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 175 133 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -3059,9 +3031,6 @@ html {
 }
 .p-6 {
   padding: 1.5rem;
-}
-.p-8 {
-  padding: 2rem;
 }
 .py-8 {
   padding-top: 2rem;
@@ -3083,13 +3052,13 @@ html {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -3183,10 +3152,6 @@ html {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.blur-lg {
-  --tw-blur: blur(16px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 .before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
@@ -3202,75 +3167,17 @@ html {
   content: var(--tw-content);
   z-index: -10;
 }
-.before\:-z-20::before {
-  content: var(--tw-content);
-  z-index: -20;
-}
 .before\:block::before {
   content: var(--tw-content);
   display: block;
-}
-.before\:hidden::before {
-  content: var(--tw-content);
-  display: none;
-}
-.before\:w-full::before {
-  content: var(--tw-content);
-  width: 100%;
-}
-.before\:-skew-y-3::before {
-  content: var(--tw-content);
-  --tw-skew-y: -3deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.before\:bg-pink-500::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
-}
-.before\:bg-white::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .before\:bg-white\/50::before {
   content: var(--tw-content);
   background-color: rgb(255 255 255 / 0.5);
 }
-.before\:accent-slate-50\/50::before {
-  content: var(--tw-content);
-  accent-color: rgb(248 250 252 / 0.5);
-}
-.before\:accent-slate-50::before {
-  content: var(--tw-content);
-  accent-color: #f8fafc;
-}
-.before\:blur-lg::before {
-  content: var(--tw-content);
-  --tw-blur: blur(16px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.before\:blur-sm::before {
-  content: var(--tw-content);
-  --tw-blur: blur(4px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.before\:blur-md::before {
-  content: var(--tw-content);
-  --tw-blur: blur(12px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 .hover\:border-coklat:hover {
   --tw-border-opacity: 1;
   border-color: rgb(192 175 133 / var(--tw-border-opacity));
-}
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.hover\:bg-yellow-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
 .hover\:bg-coklat:hover {
   --tw-bg-opacity: 1;
@@ -3379,9 +3286,30 @@ html {
 }
 @media (min-width: 1024px) {
 
-  .lg\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
+  .btn.loading.btn-xl:before, .btn.loading.lg\:btn-lg:before {
+    height: 1.25rem;
+    width: 1.25rem;
+  }
+
+  .lg\:btn-lg {
+    height: 4rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    min-height: 4rem;
+    font-size: 1.125rem;
+  }
+
+  .btn-square:where(.lg\:btn-lg) {
+    height: 4rem;
+    width: 4rem;
+    padding: 0px;
+  }
+
+  .btn-circle:where(.lg\:btn-lg) {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 9999px;
+    padding: 0px;
   }
 
   .lg\:mx-auto {
@@ -3426,19 +3354,5 @@ html {
 
   .xl\:block {
     display: block;
-  }
-
-  .xl\:hidden {
-    display: none;
-  }
-
-  .before\:xl\:block::before {
-    content: var(--tw-content);
-    display: block;
-  }
-
-  .before\:xl\:hidden::before {
-    content: var(--tw-content);
-    display: none;
   }
 }
